--- a/public/index.html
+++ b/public/index.html
@@ -292,6 +292,7 @@
     <script type="module" src="/store/itemStore.js"></script>
     <script type="module" src="/store/prices.js"></script>
     <script type="module" src="/store/invoiceStore.js"></script>
+    <script type="module" src="/store/pdfStore.js"></script>
     <script type="module" src="/store/colorTheme.js"></script>
     <script type="module" src="/store/tossStore.js"></script>
     <!-- 2) Then app.js, which references the store and sets up tabManager, etc -->
