--- a/backups/editor.html
+++ b/backups/editor.html
@@ -97,8 +97,20 @@
                 </div>
                 <div class="flex flex-col justify-between">
                   <button @click="generateInvoice" class="butt-style flex !bg-vlp !p-1.5 dark:!bg-zinc-900">
-                    <svg width="20" height="20">
-                      <use href="/icons/icons.svg#plus-circle" />
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="14"
+                      height="14"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      stroke="currentColor"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      class="feather feather-download mr-2">
+                      <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                      <polyline points="7 10 12 15 17 10"></polyline>
+                      <line x1="12" y1="15" x2="12" y2="3"></line>
                     </svg>
                     Generate PDF
                   </button>
