--- a/backups/editor.html
+++ b/backups/editor.html
@@ -96,41 +96,24 @@
                   </p>
                 </div>
                 <div class="flex flex-col justify-between">
-                  <button @click="generateInvoice" class="butt-style flex !bg-vlp !p-1.5 dark:!bg-zinc-900">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="14"
-                      height="14"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-download mr-2">
-                      <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
-                      <polyline points="7 10 12 15 17 10"></polyline>
-                      <line x1="12" y1="15" x2="12" y2="3"></line>
+                  <button @click="generateInvoice()" class="flex items-center gap-2 modal-btn-sec !p-1.5">
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#download-document"></use>
                     </svg>
-                    Generate PDF
+                    PDF
                   </button>
 
                   <button
                     @click="openEditModal = true"
                     class="butt-style flex !w-full !bg-vlp !p-1.5 dark:!bg-zinc-900">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-edit-2">
-                      <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
-                    </svg>
+                    <button
+                      @click="$store.pdfStore.generateInvoice()"
+                      class="flex items-center gap-2 modal-btn-sec !p-1.5">
+                      <svg class="size-4">
+                        <use href="/icons/icons.svg#editor"></use>
+                      </svg>
+                      PDF
+                    </button>
                     <span class="flex w-full justify-center text-center">Edit Invoice</span>
                   </button>
                 </div>
@@ -240,40 +223,16 @@
                     title="Save edit"
                     class="flex rounded-full align-middle text-vls transition duration-300 hover:text-sky-500 dark:text-vls dark:hover:text-sky-400"
                     @click="saveEdit()">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="22"
-                      height="22"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-save">
-                      <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
-                      <polyline points="17 21 17 13 7 13 7 21"></polyline>
-                      <polyline points="7 3 7 8 15 8"></polyline>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#check-circle"></use>
                     </svg>
                   </button>
                   <button
                     title="Cancel edit"
                     class="flex self-end rounded-full align-middle text-vls transition duration-300 hover:text-vla dark:text-vls dark:hover:text-vred-300"
                     @click="cancelEdit()">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="23"
-                      height="23"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-x-circle">
-                      <circle cx="12" cy="12" r="10"></circle>
-                      <line x1="15" y1="9" x2="9" y2="15"></line>
-                      <line x1="9" y1="9" x2="15" y2="15"></line>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#xmark-circle"></use>
                     </svg>
                   </button>
                 </div>
@@ -309,22 +268,8 @@
                           title="Remove item"
                           @click="removeInvoiceItem(item.id)"
                           class="mt-1 flex self-end rounded-full align-middle text-vls transition duration-300 hover:text-vla dark:text-vds dark:hover:text-vred-300">
-                          <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            width="16"
-                            height="16"
-                            viewBox="0 0 24 24"
-                            fill="none"
-                            stroke="currentColor"
-                            stroke-width="2"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            class="feather feather-trash-2">
-                            <polyline points="3 6 5 6 21 6"></polyline>
-                            <path
-                              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                            <line x1="10" y1="11" x2="10" y2="17"></line>
-                            <line x1="14" y1="11" x2="14" y2="17"></line>
+                          <svg class="size-4">
+                            <use href="/icons/icons.svg#trash"></use>
                           </svg>
                         </button>
                       </td>
@@ -384,18 +329,8 @@
                   <button
                     @click="editingPrice = 'discount'; editingPriceValue = invoiceItems.invoice.discount"
                     class="ml-2 text-vls transition duration-300 hover:text-vla dark:text-vds dark:hover:text-vla">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-edit-2">
-                      <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#editor"></use>
                     </svg>
                   </button>
                 </div>
@@ -409,39 +344,15 @@
                   <button
                     class="mr-2 text-vls transition duration-300 hover:text-sky-500 dark:text-vls dark:hover:text-sky-400"
                     @click="savePrice('discount', editingPriceValue)">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="20"
-                      height="20"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-save">
-                      <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
-                      <polyline points="17 21 17 13 7 13 7 21"></polyline>
-                      <polyline points="7 3 7 8 15 8"></polyline>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#check-circle"></use>
                     </svg>
                   </button>
                   <button
                     class="text-vls transition duration-300 hover:text-vla dark:text-vds dark:hover:text-vla"
                     @click="editingPrice = ''">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="20"
-                      height="20"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-x-circle">
-                      <circle cx="12" cy="12" r="10"></circle>
-                      <line x1="15" y1="9" x2="9" y2="15"></line>
-                      <line x1="9" y1="9" x2="15" y2="15"></line>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#xmark-circle"></use>
                     </svg>
                   </button>
                 </div>
@@ -459,18 +370,8 @@
                   <button
                     @click="editingPrice = 'total'; editingPriceValue = invoiceItems.invoice.total"
                     class="text-vls transition duration-300 hover:text-vla dark:text-vds dark:hover:text-vla">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-edit-2">
-                      <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#check-circle"></use>
                     </svg>
                   </button>
                 </div>
@@ -484,39 +385,15 @@
                   <button
                     class="text-vls transition duration-300 hover:text-sky-500 dark:text-vls dark:hover:text-sky-400"
                     @click="savePrice('total', editingPriceValue)">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="20"
-                      height="20"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-save">
-                      <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
-                      <polyline points="17 21 17 13 7 13 7 21"></polyline>
-                      <polyline points="7 3 7 8 15 8"></polyline>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#check-circle"></use>
                     </svg>
                   </button>
                   <button
                     class="text-vls transition duration-300 hover:text-vla dark:text-vds dark:hover:text-vla"
                     @click="editingPrice = ''">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="20"
-                      height="20"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-x-circle">
-                      <circle cx="12" cy="12" r="10"></circle>
-                      <line x1="15" y1="9" x2="9" y2="15"></line>
-                      <line x1="9" y1="9" x2="15" y2="15"></line>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#xmark-circle"></use>
                     </svg>
                   </button>
                 </div>
@@ -544,18 +421,8 @@
                   <button
                     @click="editingPrice = 'deposit'; editingPriceValue = invoiceItems.invoice.deposit"
                     class="ml-2 text-vls transition duration-300 hover:text-vla dark:text-vds dark:hover:text-vla">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="16"
-                      height="16"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-edit-2">
-                      <path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#editor"></use>
                     </svg>
                   </button>
                 </div>
@@ -569,39 +436,15 @@
                   <button
                     class="mr-2 text-vls transition duration-300 hover:text-sky-500 dark:text-vls dark:hover:text-sky-400"
                     @click="savePrice('deposit', editingPriceValue)">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="20"
-                      height="20"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-save">
-                      <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
-                      <polyline points="17 21 17 13 7 13 7 21"></polyline>
-                      <polyline points="7 3 7 8 15 8"></polyline>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#check-circle"></use>
                     </svg>
                   </button>
                   <button
                     class="text-vls transition duration-300 hover:text-vla dark:text-vds dark:hover:text-vla"
                     @click="editingPrice = ''; editingPriceValue = ''">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="20"
-                      height="20"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      stroke="currentColor"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      class="feather feather-x-circle">
-                      <circle cx="12" cy="12" r="10"></circle>
-                      <line x1="15" y1="9" x2="9" y2="15"></line>
-                      <line x1="9" y1="9" x2="15" y2="15"></line>
+                    <svg class="size-4">
+                      <use href="/icons/icons.svg#xmark-circle"></use>
                     </svg>
                   </button>
                 </div>
