Discount shows need to work on editing and overal idea BLYAT

--- a/public/html/editorMain.html
+++ b/public/html/editorMain.html
@@ -23,7 +23,9 @@
       <div class="sticky top-0 z-10 p-4 bg-vlp dark:bg-vdp2 shadow-md">
         <p class="mb-2 font-medium text-vls3 dark:text-vds">Invoice Book</p>
         <input type="text" placeholder="Search invoices..." class="srch-style" />
-        <button @click="$store.edit.fetchListById()" class="modal-btn-prim">Refresh</button>
+        <div class="w-full flex justify-end">
+          <button @click="$store.edit.fetchListById()" class="modal-btn-prim mt-4">Refresh</button>
+        </div>
       </div>
       <!-- Scrollable List -->
       <div class="flex-1 overflow-y-auto table-scrollbar p-2">
