--- a/public/html/editor/editView.html
+++ b/public/html/editor/editView.html
@@ -25,36 +25,35 @@
         </div>
       </div>
       <!-- Client Details -->
-      <div class="mb-2 flex w-full justify-between rounded border border-vls/40 bg-slate-600 p-2 dark:bg-neutral-700">
-        <div>
-          <p>
-            Client name:
+      <div class="mb-2 flex w-full justify-between rounded border border-vls/40 p-2">
+        <div class="w-full">
+          <div class="flex justify-between w-full">
+            <p>Client name:</p>
             <span x-text="$store.edit.invoiceItems.client?.name"></span>
-          </p>
-          <p>
-            Company:
+          </div>
+          <div class="flex justify-between w-full">
+            <p>Company:</p>
             <span x-text="$store.edit.invoiceItems.client?.company_name"></span>
-          </p>
-          <p>
-            Address:
+          </div>
+          <div class="flex justify-between w-full">
+            <p>Address:</p>
             <span x-text="$store.edit.invoiceItems.client?.address"></span>
-          </p>
-          <p>
-            Email:
+          </div>
+          <div class="flex justify-between w-full">
+            <p>Email:</p>
             <span x-text="$store.edit.invoiceItems.client?.email"></span>
-          </p>
+          </div>
         </div>
       </div>
       <!-- Invoice Items Table -->
-      <div
-        class="alt-table-scrollbar mb-2 w-full overflow-y-auto rounded border border-vls/40 bg-slate-600 dark:bg-vdp3">
+      <div class="alt-table-scrollbar mb-2 w-full overflow-y-auto border rounded border-vls/40 p-1">
         <table class="w-[calc(100%-10px)] table-auto border-separate px-0.5" style="border-spacing: 0 10px">
           <thead class="sticky top-0 table-head-style border-clipper">
             <tr>
-              <th class="p-1">Name</th>
-              <th class="p-1">Type</th>
-              <th class="p-1">Qty</th>
-              <th class="p-1">Price</th>
+              <th class="p-2 text-start px-2 round-left-border">Name</th>
+              <th class="p-2">Type</th>
+              <th class="p-2 text-right">Qty</th>
+              <th class="p-2 round-right-border">Price</th>
             </tr>
           </thead>
           <tbody class="table-body-style table-scrollbar">
@@ -63,7 +62,7 @@
                 <td class="round-left-border w-[75%] px-2 py-1 text-sm" x-text="item.name"></td>
                 <td class="px-2 py-1" x-text="item.type"></td>
                 <td class="w-[15%] px-2 py-1 text-sm text-right" x-text="item.quantity"></td>
-                <td class="round-right-border w-[10%] px-2 py-1 text-left text-sm" x-text="'£' + item.price"></td>
+                <td class="round-right-border w-[10%] px-4 py-1 text-right text-sm" x-text="'£' + item.price"></td>
               </tr>
             </template>
           </tbody>
@@ -73,21 +72,39 @@
       <div class="mb-2 flex flex-col rounded border border-vlp bg-slate-600 p-2 dark:bg-neutral-700">
         <p x-text="'Subtotal: £' + $store.edit.invoiceItems.invoice?.subtotal"></p>
         <p x-text="'VAT: £' + $store.edit.invoiceItems.invoice?.vat"></p>
-        <template x-if="$store.edit.invoiceItems.invoice?.discount_flat === 1">
-          <p x-text="'Discount: £' + $store.edit.invoiceItems.invoice?.discount"></p>
+
+        <!-- Show Discount only if discount_type != 0 -->
+        <template
+          x-if="$store.edit.invoiceItems.invoice?.discount_type && $store.edit.invoiceItems.invoice?.discount_type !== 0">
+          <!-- If discount_type === 1 -> Flat -->
+          <template x-if="$store.edit.invoiceItems.invoice?.discount_type === 1">
+            <p x-text="'Discount: £' + $store.edit.invoiceItems.invoice?.discount_value"></p>
+          </template>
+
+          <!-- If discount_type === 2 -> Percent -->
+          <template x-if="$store.edit.invoiceItems.invoice?.discount_type === 2">
+            <p x-text="'Discount: ' + $store.edit.invoiceItems.invoice?.discVal_ifPercent + '%'"></p>
+          </template>
         </template>
-        <template x-if="$store.edit.invoiceItems.invoice?.discount_percent === 1">
-          <p x-text="'Discount: ' + $store.edit.invoiceItems.invoice?.discount + '%'"></p>
+
+        <!-- Show Deposit only if deposit_type != 0 -->
+        <template
+          x-if="$store.edit.invoiceItems.invoice?.deposit_type && $store.edit.invoiceItems.invoice?.deposit_type !== 0">
+          <!-- If deposit_type === 1 -> Flat -->
+          <template x-if="$store.edit.invoiceItems.invoice?.deposit_type === 1">
+            <p x-text="'Deposit: £' + $store.edit.invoiceItems.invoice?.deposit_value"></p>
+          </template>
+
+          <!-- If deposit_type === 2 -> Percent -->
+          <template x-if="$store.edit.invoiceItems.invoice?.deposit_type === 2">
+            <p x-text="'Deposit: ' + $store.edit.invoiceItems.invoice?.depoVal_ifPercent + '%'"></p>
+          </template>
         </template>
+
         <p x-text="'Total: £' + $store.edit.invoiceItems.invoice?.total"></p>
-        <template x-if="$store.edit.invoiceItems.invoice?.deposit_flat === 1">
-          <p x-text="'Deposit: £' + $store.edit.invoiceItems.invoice?.deposit"></p>
-        </template>
-        <template x-if="$store.edit.invoiceItems.invoice?.deposit_percent === 1">
-          <p x-text="'Deposit: ' + $store.edit.invoiceItems.invoice?.deposit + '%'"></p>
-        </template>
         <p x-text="'Note: ' + $store.edit.invoiceItems.invoice?.note"></p>
       </div>
+
       <div class="flex gap-4 justify-end">
         <button @click="$store.pdfStore.generateInvoice()" class="modal-btn-sec flex items-center">
           <svg class="size-4 mr-1">
@@ -206,7 +223,44 @@
       <div class="flex flex-col rounded border border-vlp bg-slate-600 p-2 dark:bg-neutral-700">
         <p x-text="'Subtotal: £' + $store.edit.invoiceItems.invoice?.subtotal"></p>
         <p x-text="'VAT: £' + $store.edit.invoiceItems.invoice?.vat"></p>
-        <!-- Etc. Link them to $store.edit.savePrice('discount', newValue) if you want direct editing. -->
+
+        <!-- Discount -->
+        <template
+          x-if="$store.edit.invoiceItems.invoice?.discount_type && $store.edit.invoiceItems.invoice?.discount_type !== 0">
+          <template x-if="$store.edit.invoiceItems.invoice?.discount_type === 1">
+            <!-- Flat discount input? Or just display? -->
+            <p>
+              Discount (Flat):
+              <span x-text="'£' + $store.edit.invoiceItems.invoice?.discount_value"></span>
+            </p>
+          </template>
+          <template x-if="$store.edit.invoiceItems.invoice?.discount_type === 2">
+            <!-- Percent discount input? -->
+            <p>
+              Discount (Percent):
+              <span x-text="$store.edit.invoiceItems.invoice?.discVal_ifPercent + '%'"></span>
+            </p>
+          </template>
+        </template>
+
+        <!-- Deposit -->
+        <template
+          x-if="$store.edit.invoiceItems.invoice?.deposit_type && $store.edit.invoiceItems.invoice?.deposit_type !== 0">
+          <template x-if="$store.edit.invoiceItems.invoice?.deposit_type === 1">
+            <p>
+              Deposit (Flat):
+              <span x-text="'£' + $store.edit.invoiceItems.invoice?.deposit_value"></span>
+            </p>
+          </template>
+          <template x-if="$store.edit.invoiceItems.invoice?.deposit_type === 2">
+            <p>
+              Deposit (Percent):
+              <span x-text="$store.edit.invoiceItems.invoice?.depoVal_ifPercent + '%'"></span>
+            </p>
+          </template>
+        </template>
+
+        <p x-text="'Total: £' + $store.edit.invoiceItems.invoice?.total"></p>
       </div>
     </div>
   </template>
