--- a/public/html/editor/editView.html
+++ b/public/html/editor/editView.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <!-- Client Details -->
-      <div class="mb-2 flex w-full justify-between rounded border border-vls/40 p-2">
+      <div class="mb-2 flex w-full justify-between rounded border bg-vlp shadow dark:bg-vdp2 border-vls/40 p-2">
         <div class="w-full">
           <div class="flex justify-between w-full">
             <p>Client name:</p>
@@ -69,7 +69,7 @@
         </table>
       </div>
       <!-- Prices -->
-      <div class="mb-2 flex flex-col rounded border border-vlp bg-slate-600 p-2 dark:bg-neutral-700">
+      <div class="mb-2 flex flex-col w-full justify-between rounded border bg-vlp shadow dark:bg-vdp2 border-vls/40 p-2">
         <p x-text="'Subtotal: £' + $store.edit.invoiceItems.invoice?.subtotal"></p>
         <p x-text="'VAT: £' + $store.edit.invoiceItems.invoice?.vat"></p>
 
